Ingress/ingress-cis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: k8s-bigip-ctlr-cm-deployment
  namespace: kube-system
spec: 
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector: 
    matchLabels: 
      app: k8s-bigip-ctlr-cm
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        app: k8s-bigip-ctlr-cm
      name: k8s-bigip-ctlr-cm
    spec: 
      containers: 
        - 
          args: 
            # See https://clouddocs.f5.com/containers/latest/userguide/config-parameters.html
            # for more configuration options.
            - "--credentials-directory=/tmp/creds"
            - "--bigip-partition=CIS1"
            - "--pool-member-type=nodeport"
            - "--insecure=true"
            - "--node-label-selector=node-role.kubernetes.io/worker"
            - "--hubmode=false"
            - "--kubeconfig=/home/adit/.kube/config"
            - "--manage-ingress=true"
            - "--namespace=projectone"
            - "--log-level=DEBUG"
          command: 
            - /app/bin/k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:latest"   
          name: f5-server
          volumeMounts:
          - name: tmp-creds
            mountPath: "/tmp/creds"
            readOnly: true
      volumes:
      - name: tmp-creds
        secret:
          secretName: bip-creds
      serviceAccountName: bigip-ctlr
