Ingress/nodeport.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: projectone
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ngxdc
  type: NodePort
